# bgutil-ytdlp-pot-provider-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh
.github/: copilot-instructions.md
.github/workflows/: build-container.yml  build-test-audit-coverage.yml  copilot-setup-steps.yml  release.yml  test.yml
.github/workflows/container-reused-steps/: action.yml
docs/: api-reference.md  deployment-guide.md  report-guidelines.md  tech-architecture.md  testing-guidelines.md  troubleshooting.md
examples/: server_example.rs
plugin/: pyproject.toml
plugin/yt_dlp_plugins/extractor/: getpot_bgutil.py  getpot_bgutil_cli.py  getpot_bgutil_http.py  getpot_bgutil_script.py
scripts/: install_plugin_dev.sh  quality_check.sh
server/: README.md  package-lock.json  package.json  tsconfig.json
server/src/: README.md  UPDATE.md  generate_once.ts  main.ts  session_manager.ts  utils.ts
src/: lib.rs  main.rs
src/cli/: generate.rs  mod.rs  server.rs
src/config/: loader.rs  mod.rs  settings.rs
src/error/: mod.rs  types.rs
src/server/: app.rs  handlers.rs
src/session/: botguard.rs  innertube.rs  manager.rs  mod.rs  network.rs  webpo_minter.rs
src/types/: internal.rs  mod.rs  request.rs  response.rs  serde_helpers.rs
src/utils/: cache.rs  mod.rs  version.rs
tests/: cli_integration.rs  cli_robustness_tests.rs  config_loading.rs  enhanced_session_manager.rs  phase6_integration.rs  server_integration.rs  session_manager_integration.rs
tests/common/: mod.rs
tests/integration/: mod.rs
