[package]
name = "bgutil-ytdlp-pot-provider"
version = "0.1.0"
edition = "2024"
authors = ["Jim Chen <Jim@ChenJ.im>", "Brian Le <brainicism@gmail.com>"]
description = "BgUtils POT Provider - Rust implementation for generating YouTube POT tokens"
license = "GPL-3.0-or-later"
repository = "https://github.com/jim60105/bgutil-ytdlp-pot-provider-rs"
homepage = "https://github.com/jim60105/bgutil-ytdlp-pot-provider-rs"
documentation = "https://docs.rs/bgutil-ytdlp-pot-provider"
readme = "README.md"
keywords = ["yt-dlp", "pot-provider", "youtube", "bgutils"]
categories = ["api-bindings", "development-tools", "multimedia", "command-line-utilities"]

exclude = [
    ".github/",
    "server/",
    "plugin/",
    "scripts/",
    "docs/",
    "target/",
    "*.log",
    "*.tmp",
    "**/.DS_Store",
    "Cargo.lock",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Linting configuration
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"

[lints.clippy]
missing_docs_in_private_items = "allow" # Allow missing private docs
doc_markdown = "allow"                  # Allow markdown formatting

[lints.rust]
missing_docs = "allow" # Allow missing docs at rust level

[dependencies]
# Dependencies
# HTTP server
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform directories
dirs = "6.0"

[dev-dependencies]
# Testing frameworks and utilities
tokio-test = "0.4"
tower-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[[bin]]
name = "bgutil-pot-server"
path = "src/bin/server.rs"

[[bin]]
name = "bgutil-pot-generate"
path = "src/bin/generate.rs"
